--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource.properties
@@ -35,3 +35,7 @@ lbl_bydownload=M\u00e1s descargado
 lbl_byvaluated=Mejor calificado
 
 lblSubmit=Guardar
+lblCancel=Regresar
+lbl_active=Activo
+lbl_updatefile=Actualizar archivo
+lbl_vercomment=Comentario para nueva versi\u00f3n del archivo
