--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
@@ -12,10 +12,10 @@ lbl_topicFilter=Filtrar por Tema
 lbl_searchDS1=B\u00fasqueda de Dataset
 lbl_searchDS2=Resultado de la b\u00fasqueda
 lbl_orderby=Ordenar
-lbl_byrecent=M\u00e1s reciente
-lbl_byvisited=M\u00e1s visitado
-lbl_bydownload=M\u00e1s descargado
-lbl_byvaluated=Mejor calificado
+lbl_byrecent=Recientes
+lbl_byvisited=Consultados
+lbl_bydownload=Descargados
+lbl_byvaluated=Calificados
 lbl_publisher=Publicador
 lbl_formats=Formato
 lbl_updated=Actualizaci\u00f3n
@@ -52,3 +52,5 @@ lbl_numapps=N\u00famero de aplicaciones
 lbl_val1=No recomendable
 lbl_notDSfound=No se encontraron Datasets
 lbl_all=Todos
+lbl_download=Descargar
+lbl_filename=Archivo
