se modifica implementacion

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource.properties
@@ -7,9 +7,9 @@ lbl_sinResultados=No hubo resultados
 lbl_filterCategory=Filtrar por categor\u00eda
 lbl_filterIntitution=Filtrar por instituci\u00f3n
 lbl_filterAuthor=Filtrar por autor
-rd_mejorCalificada=Mejor calificadas
-rd_masComentadas=M\u00e1s comentadas
-rd_fecha=Fecha de carga
+lbl_mejorCalificada=Calificadas
+lbl_masComentadas=Comentadas
+lbl_fecha=Recientes
 lbl_ordenar=Ordenar
 lbl_autorDetalle=Autor:
 lbl_fechaCracionDetalle=Fecha de creaci\u00f3n:
@@ -43,3 +43,9 @@ lbl_time1=Cerca de
 lbl_resTime=resultados
 lbl_segundos=segundos
 lbl_numComment=No. comentarios
+lbl_agreement=Acepto t\u00e9rminos y licencia de uso
+lbl_promtTitleAPP=Ingresa el titulo de tu aplicacion
+lbl_titleFault=Titulo inv\u00e1lido
+lbl_textAreaFault=no debe introducir caracteres especiales solo letras y numeros
+lbl_terminosCondicionesFault=Para agregar una aplicacion es necesario aceptar los t\u00e9rminos y condiciones
+lbl_notAppFound=No se encontraron aplicaciones
