se agrega imlementacion en el guardado para agregar nuevo campo

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource.properties
@@ -49,3 +49,6 @@ lbl_titleFault=Titulo inv\u00e1lido
 lbl_textAreaFault=no debe introducir caracteres especiales solo letras y numeros
 lbl_terminosCondicionesFault=Para agregar una aplicacion es necesario aceptar los t\u00e9rminos y condiciones
 lbl_notAppFound=No se encontraron aplicaciones
+lbl_all=Todos
+lbl_category=Categoria
+msg_appExito=Su aplicacion ha sido guardada exitosamente, pasara al proceso de validaci\u00f3n para su aprobaci\u00f3n.
