--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/CommentsViewResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/CommentsViewResource.properties
@@ -15,7 +15,7 @@ msgErrInvalidEmail=El correo electr\u00f3nico es requerido
 
 lblComment=Comentario
 promptMsgComment=Ingresa tu comentario
-lblCommentFault=Comentario invalido
+lblCommentFault=Comentario invalido solo se aceptan letas, numeros y signos de puntuaci\u00f3n
 msgErrInvalidComment=El comentario es requerido
 
 
@@ -30,6 +30,8 @@ lblAgreement=Acepto los terminos y condiciones de uso
 lblLinkAgreement=Terminos y condiciones de uso
 promptMsgAgreement=Debesa aceptar los terminos y condiciones de uso
 msgErrAgreement=Debesa aceptar los terminos y condiciones de uso
+
+msgErrForm=Datos incompletos
 
 lblReset=Borrar
 lblSubmit=Enviar
