--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource.properties
@@ -40,3 +40,6 @@ lbl_active=Activo
 lbl_updatefile=Actualizar archivo
 lbl_vercomment=Comentario para nueva versi\u00f3n del archivo
 lbl_approve=Aprobado
+lbl_searchDS2=Resultado de la b\u00fasqueda
+msg_noresults=No hubo resultados
+msg_secs=segundos
