Se agrega etiquetas y e hace implementacion para el guardado de una lista de datasets

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource.properties
@@ -34,7 +34,7 @@ btn_appGuardar=Guardar
 btn_appCancelar=Cancelar
 lbl_appUserLoggeo=Necesitas estar loggeado
 btn_appActualizar=Actualizar
-lbl_DSUsado=Dataset usado
+lbl_DSUsado=Dataset:
 lbl_editar=Editar
 lbl_editAPP=Editar una aplicaci\u00f3n
 pg_gofirst=Ir al inicio
@@ -42,7 +42,7 @@ pg_golast=Ir al final
 lbl_time1=Cerca de
 lbl_resTime=resultados
 lbl_segundos=segundos
-lbl_numComment=No. comentarios
+lbl_numComment=Comentarios
 lbl_agreement=Acepto t\u00e9rminos y licencia de uso
 lbl_promtTitleAPP=Ingresa el titulo de tu aplicacion
 lbl_titleFault=Titulo inv\u00e1lido
@@ -51,4 +51,14 @@ lbl_terminosCondicionesFault=Para agregar una aplicacion es necesario aceptar lo
 lbl_notAppFound=No se encontraron aplicaciones
 lbl_all=Todos
 lbl_category=Categoria
-msg_appExito=Su aplicacion ha sido guardada exitosamente, pasara al proceso de validaci\u00f3n para su aprobaci\u00f3n.
+msg_appExito=La aplicaci\u00f3n ha sido cargada en la plataforma y ser\u00e1 validada antes de su publicaci\u00f3n. Gracias por tu colaboraci\u00f3n.
+lbl_appDownloads=Descargas:
+lbl_rated=Valoraci\u00f3n
+lbl_descargarAPP=Descargar Aplicaci\u00f3n
+lbl_dsRelated=Datasets relacionados
+lbl_viewAll=Ver todas
+lbl_appRelated=Aplicaciones relacionadas
+lbl_promtTextArea=Ingresa la descripci\u00f3n de tu aplicaci\u00f3n
+lbl_invalidMsjTA=Datos inv\u00e1lidos
+lbl_promtURL=Ingresa la url de tu aplicacion para ser descargada
+lbl_invalidURL=URL inv\u00e1lida
