--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/CommentsManageResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/CommentsManageResource.properties
@@ -2,7 +2,11 @@
 # and open the template in the editor.
 
 #View
-
+lblNoComments=No hay comentario por revisar
+lblCommentApproved=Comentario aprobado
+lblCommentReviewed=Comentario revisado
+lblApproved=Aprovado
+lblReviewed=Revisado
 
 #Administraci\u00f3n
 msgActResource=Se actualiz\u00f3 exitosamente el recurso
