--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/CommentsViewResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/CommentsViewResource.properties
@@ -2,6 +2,9 @@
 # and open the template in the editor.
 
 #View
+lblTitle=Comentarios
+lblCommentInappropriate=Comentario inapropiado
+msgCommentInappropriate=Notificar como comentario inapropiado
 
 lblName=Nombre completo
 promptMsgName=Ingresa tu nombre completo
