Se actualiza etiqueta para descargas de aplicacion

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource.properties
@@ -54,7 +54,7 @@ lbl_category=Categoria
 msg_appExito=La aplicaci\u00f3n ha sido cargada en la plataforma y ser\u00e1 validada antes de su publicaci\u00f3n. Gracias por tu colaboraci\u00f3n.
 lbl_appDownloads=Descargas:
 lbl_rated=Valoraci\u00f3n
-lbl_descargarAPP=Descargar Aplicaci\u00f3n
+lbl_descargarAPP=Descargar
 lbl_dsRelated=Datasets relacionados
 lbl_viewAll=Ver todas
 lbl_appRelated=Aplicaciones relacionadas
