Cambio de estilos a enlaces  de las estadisticas en tabla

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/StatisticsResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/StatisticsResource.properties
@@ -29,3 +29,9 @@ lbl_col1_table_UserSat=Instituci\u00f3n
 lbl_col2_table_UserSat=Dataset
 lbl_col3_table_UserSat=Valoraci\u00f3n
 lbl_col4_table_UserSat=Comentarios
+lbl_title_gral=Estad\u00edsticas
+lbl_tabla1=Dataset por instituci\u00f3n
+lbl_tabla2=Dataset por aplicaci\u00f3n
+lbl_tabla3=Uso de datasets
+lbl_tabla4=Uso de aplicaciones
+lbl_tabla5=Satisfaci\u00f3n de usuarios   
