Se agrega etiqueta para los publicadores

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DirectoryResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DirectoryResource.properties
@@ -42,3 +42,4 @@ lbl_otroPB=Otros publicadores :
 pg_goFirst=Ir al inicio
 pg_golast=Ir al final
 lbl_titleBusqueda=Busqueda
+lbl_searchPub=Se encontraron
