--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/CommentsManageResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/CommentsManageResource.properties
@@ -4,8 +4,8 @@
 #View
 lblNoComments=No hay comentario por revisar
 lblCommentApproved=Comentario aprobado
-lblCommentReviewed=Comentario revisado
-lblApproved=Aprovado
+lblCommentReviewed=Comentario inapropiado
+lblApproved=Aprobado
 lblReviewed=Revisado
 
 #Administraci\u00f3n
