--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/CommentsViewResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/CommentsViewResource.properties
@@ -33,6 +33,7 @@ lblAgreement=Acepto los terminos y condiciones de uso
 lblLinkAgreement=Terminos y condiciones de uso
 promptMsgAgreement=Debesa aceptar los terminos y condiciones de uso
 msgErrAgreement=Debesa aceptar los terminos y condiciones de uso
+lblLinkManage=Administrar comentarios inapropiados
 
 msgErrForm=Datos incompletos
 
