Se agregaron etiquetas internacionalizadas

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource.properties
@@ -55,3 +55,10 @@ lbl_download=Descargas
 lbl_rank=Valoraci\u00f3n
 lbl_contributions=Contribuciones
 lbl_comments=Comentarios
+lbl_edit=Editar
+lbl_remove=Eliminar
+lbl_noInstitutionInfo=No se encontr\u00f3 informaci\u00f3n de la instituci\u00f3n
+lbl_mydata=Mis Datos
+lbl_newds=Nuevo Dataset
+lbl_mydatasets=Mis Datasets
+lbl_activities=Actividad
