--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
@@ -54,3 +54,14 @@ lbl_notDSfound=No se encontraron Datasets
 lbl_all=Todos
 lbl_download=Descargar
 lbl_filename=Archivo
+lbl_pages=P\u00e1gina
+lbl_reviewDataset=Dataset por revisar
+lbl_gowebsite=Ir al sitio web
+msg_emailNotify=Se envi\u00f3 notificaci\u00f3n de revisi\u00f3n al publicador del Dataset. Cambio de estatus a
+lbl_notassigned=No asignada
+lbl_approved=Aprobar
+lbl_reject=Rechazar
+lbl_viewallupdates=Ver todas las actualizaciones
+lbl_viewmore=ver m\u00e1s
+lbl_updatehistory=Historial de actualizaciones
+lbl_viewall=Ver todas
