Modificación de gráficas en Recurso ChartsResource e internacionalización en StatisticsResource

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/StatisticsResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/StatisticsResource.properties
@@ -35,3 +35,6 @@ lbl_tabla2=Dataset por aplicaci\u00f3n
 lbl_tabla3=Uso de datasets
 lbl_tabla4=Uso de aplicaciones
 lbl_tabla5=Satisfaci\u00f3n de usuarios   
+lbl_DowmloadCSV=Descargar CSV
+lbl_TotalDS=Total de datasets :
+lbl_TotalApp=Total  de aplicaciones :
