--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource.properties
@@ -8,7 +8,7 @@ lbl_version=Versi\u00f3n
 lbl_size=Tama\u00f1o
 lbl_topic=Tema
 lbl_toplevellink=Enlace de alto nivel
-lbl_technicallink=Enlace T\u00e9cnico
+lbl_technicallink=Contacto
 lbl_weburl=Sitio web del emisor
 lbl_contactemail=Email del contacto
 lbl_format=Formato
