--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
@@ -27,7 +27,7 @@ lbl_val3=Bueno
 lbl_val2=Regular
 lbl_description=Descripci\u00f3n
 lbl_institution=Instituci\u00f3n
-lbl_technicalContact=Enlace t\u00e9cnico
+lbl_technicalContact=Contacto
 lbl_created=Creaci\u00f3n
 lbl_publisherwebsite=Sitio web del emisor
 lbl_emailContact=Correo electr\u00f3nico contacto
