Modificación de la reunión del 2 de Julio (Eliminación del total de descargas de aplicaciones y datasets)

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/StatisticsResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/StatisticsResource.properties
@@ -38,3 +38,9 @@ lbl_tabla5=Satisfaci\u00f3n de usuarios
 lbl_DowmloadCSV=Descargar CSV
 lbl_TotalDS=Total de datasets :
 lbl_TotalApp=Total  de aplicaciones :
+lbl_Average1=No recomendable
+lbl_Average2=Regular
+lbl_Average3=Bueno(a)
+lbl_Average4=Recomendable
+lbl_Average5=Excelente
+lbl_GoBack=Regresar
