--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
@@ -10,7 +10,7 @@ lbl_sectorFilter=Filtrar por Sector
 lbl_institFilter=Filtrar por Instituci\u00f3n
 lbl_topicFilter=Filtrar por Tema
 lbl_searchDS1=B\u00fasqueda de Dataset
-lbl_searchDS2=Resultado de la b\u00fasqueda
+lbl_searchDS2=Resultado b\u00fasqueda
 lbl_orderby=Ordenar
 lbl_byrecent=Recientes
 lbl_byvisited=Consultados
