--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource.properties
@@ -62,3 +62,5 @@ lbl_mydata=Mis Datos
 lbl_newds=Nuevo Dataset
 lbl_mydatasets=Mis Datasets
 lbl_activities=Actividad
+msg_delokdataset=El dataset se elimin\u00f3 correctamente
+msg_delNOTokdataset=El dataset no se pudo eliminar
