--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSHomeResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSHomeResource.properties
@@ -15,5 +15,5 @@ lbl_bydownload=Descargados
 lbl_byvaluated=Calificados
 lbl_data=Datos
 lbl_catalogdata=Ver Cat\u00e1logo de Datos
-lbl_about=sobre
+lbl_about=informaci\u00f3n sobre
 lbl_alltopics=Todos los temas
