--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
@@ -38,10 +38,10 @@ lbl_rated=Valoraci\u00f3n
 lbl_updateDS=Actualizaciones del Dataset
 lbl_versionNum=N\u00famero de versi\u00f3n / revisi\u00f3n
 lbl_DateUpdate=Fecha de actualizaci\u00f3n
-lbl_exportDSmeta=Exportar ficha del Dataset
+lbl_exportDSmeta=Exportar ficha a
 lbl_views=Visitas
 lbl_downloads=Descargas
-lbl_statsDS=Estad\u00edsticas del Dataset
+lbl_statsDS=Estad\u00edsticas
 lbl_relatesApps=Aplicaciones relacionadas
 lbl_NOrelatesApps=No se encontraron aplicaciones relacionadas
 lbl_lastDownload=\u00daltima descarga
@@ -52,7 +52,7 @@ lbl_numapps=N\u00famero de aplicaciones
 lbl_val1=No recomendable
 lbl_notDSfound=No se encontraron Datasets
 lbl_all=Todos
-lbl_download=Descargar
+lbl_download=Descargar dataset
 lbl_filename=Archivo
 lbl_pages=P\u00e1gina
 lbl_reviewDataset=Dataset por revisar
