se modifica etiqueta de fecha de creacion

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource.properties
@@ -12,7 +12,7 @@ lbl_masComentadas=Comentadas
 lbl_fecha=Recientes
 lbl_ordenar=Ordenar
 lbl_autorDetalle=Autor:
-lbl_fechaCracionDetalle=Fecha de creaci\u00f3n:
+lbl_fechaCracionDetalle=Fecha creaci\u00f3n:
 lbl_licenciaDetalle=Licencia:
 lbl_urlDetalle=URL:
 lbl_valoracionDetalle=Valoraci\u00f3n:
